K8S/server_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: server
  template:
    metadata:
      labels:
        component: server
    spec:
      containers:
        - name: bc-api
          image: api
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
